# website2.0

./: .gitignore  .pre-commit-config.yaml  Dockerfile  package-lock.json  package.json  pyproject.toml  readme.md  test-setup.sh
.github/workflows/: master_roel-huijskens.yml  python-testing.yml
app/: Dockerfile  app_logging.py  dao.py  dependencies.py  main.py  models.py  nofications.py  requirements.txt  utils.py
app/controllers/: chat_controller.py
app/db/: dao.py
app/domain/: openai.py
app/frontend_dist/: index.html
app/frontend_dist/assets/: index-3A_8Q7ab.css  index-6juDQfpj.css  index-BNjgio-A.css  index-BNvmQOfh.js  index-BQnqFL-g.css  index-B_elzDIC.js  index-BqpInSls.js  index-C0_KxXmF.js  index-C5HgT0l2.css  index-C8xMqWcU.js  index-CACG_lwB.js  index-CCEVzLXa.js  index-CDeoB92e.css  index-CWSUMLkz.js  index-CeTpFRx5.css  index-CnJlJZUU.js  index-D4UcmpNW.js  index-D8VODSM4.js  index-DYxz4yGa.js  index-DcBr8ZLm.js  index-DiZMB-zX.js  (+11 more)
app/knowledge_bank/: Hobbies.txt  Studies.txt  Work.txt  me.txt  my_info.yml  website.txt
app/logging/: app_logging.py  nofications.py
backend/: .env  main.py  requirements.txt
backend/frontend_dist/: index.html
knowledge_bank/: Hobbies.txt  Studies.txt  Work.txt  me.txt  my_info.yml  website.txt
scripts/: backend_tests.sh  liniting-formatting.sh
tests/: test_routes.py
tests/controllers/: test_chat_controller.py
tests/db/: test_dao.py
tests/domain/: test_openai.py
website/: docker_vite.config.txt  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.vue  style.css
(+17 files in other folders)
